# nomo

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  pr-smoke.yml  release.yml
crates/nomo/: Cargo.toml
crates/nomo/src/: ffi_bindgen.rs  incremental.rs  lib.rs  project.rs  semantic.rs
crates/nomo/src/project/: build.rs  dependency_resolution.rs  dependency_tree.rs  ffi.rs  git_cache.rs  manifest_migration.rs  modules.rs  package.rs  package_graph.rs  registry_http.rs  resolve.rs  testing.rs  update.rs  vendor.rs  workspace.rs
crates/nomo/src/semantic/: member_resolution.rs
crates/nomo/tests/: cli_json.rs  cli_project.rs  diagnostics_docs.rs  examples.rs
crates/nomo_codegen_c/: Cargo.toml
crates/nomo_compiler/: Cargo.toml
crates/nomo_compiler/src/: analysis.rs  analysis_generic.rs  analysis_usage.rs  analysis_usage_builtins.rs  builtins.rs  builtins_collections.rs  builtins_core_std.rs  builtins_diagnostics.rs  builtins_extensions.rs  builtins_file_methods.rs  builtins_http.rs  builtins_io.rs  builtins_num.rs  builtins_result.rs  builtins_result_option.rs  builtins_system.rs  builtins_value_methods.rs  declarations.rs  driver.rs  expression_calls.rs  expression_single_calls.rs  expressions.rs  externs.rs  ffi_layout.rs  import_diagnostics.rs  import_resolution.rs  imports.rs  lib.rs  module_graph.rs  modules.rs  program_lowering.rs  question_assignments.rs  question_blocks.rs  question_extraction.rs  question_initializers.rs  question_lowering.rs  question_returns.rs  statement_patterns.rs  statements.rs  tests.rs  (+21 more)
crates/nomo_compiler/src/analysis/: analysis_generic.rs  analysis_usage.rs  analysis_usage_builtins.rs  analysis_usage_prelude.rs
crates/nomo_compiler/src/builtins/: builtins_array_methods.rs  builtins_char.rs  builtins_env.rs  builtins_ffi.rs  builtins_fmt.rs  builtins_fs.rs  builtins_hash.rs  builtins_math.rs  builtins_net_methods.rs  builtins_option.rs  builtins_os.rs  builtins_path.rs  builtins_process.rs  builtins_string.rs  builtins_time.rs
crates/nomo_compiler/src/core/: declarations.rs  driver.rs  externs.rs  interfaces.rs  program_lowering.rs  type_parsing.rs  typing.rs
crates/nomo_compiler/src/expressions/: expression_calls.rs  expression_enums.rs  expression_helpers.rs  expression_if.rs  expression_match.rs  expression_ops.rs  expression_single_calls.rs  expression_structs.rs
crates/nomo_compiler/src/imports/: import_diagnostics.rs  import_resolution.rs  imports.rs  modules.rs
crates/nomo_compiler/src/questions/: question_match.rs  question_returns.rs
crates/nomo_compiler/src/statements/: statement_assignments.rs  statement_blocks.rs  statement_returns.rs  statements.rs
crates/nomo_compiler/src/validation/: validation.rs  validation_imports.rs  validation_type_diagnostics.rs  validation_types.rs
crates/nomo_doc/: Cargo.toml
crates/nomo_fmt/: Cargo.toml
crates/nomo_ir/: Cargo.toml
crates/nomo_lockfile/: Cargo.toml
crates/nomo_lsp_bridge/: Cargo.toml
crates/nomo_manifest/: Cargo.toml
crates/nomo_resolver/: Cargo.toml
crates/nomo_resolver/src/: lib.rs  registry_metadata.rs  registry_transport.rs  solver.rs
crates/nomo_runtime/: Cargo.toml
crates/nomo_supply_chain/: Cargo.toml
crates/nomo_syntax/: Cargo.toml
crates/nomo_target/: Cargo.toml
crates/nomo_test/: Cargo.toml
crates/nomo_wasm/: Cargo.toml  README.md
docs/: cross-compilation.md  editor-integrations.md  ffi.md  incremental-cache.md  index.md  package-management.md  standard-library.md  transparency-operations.md
docs/diagnostics/: E0001.md  E0101.md  E0102.md  E0103.md  E0104.md  E0105.md  E0106.md  E0107.md  E0108.md  E0200.md  E0201.md  E0202.md  E0203.md  E0206.md  E0207.md  E0208.md  E0209.md  E0210.md  E0211.md  E0212.md  E0213.md  E0214.md  E0215.md  E0216.md  E0217.md  E0218.md  E0219.md  E0220.md  E0221.md  E0222.md  E0223.md  E0224.md  E0225.md  E0226.md  E0227.md  E0228.md  E0229.md  E0230.md  E0231.md  E0232.md  (+118 more)
examples/: README.md
examples/args/: nomo.toml
examples/array_basic/: nomo.toml
examples/array_enum/: nomo.toml
examples/array_get_none/: nomo.toml
examples/array_nested/: nomo.toml
examples/array_option_lifecycle/: nomo.toml
examples/array_param_return/: nomo.toml
examples/array_reassign/: nomo.toml
examples/array_struct/: nomo.toml
examples/array_swap/: nomo.toml
examples/array_value_semantics/: nomo.toml
examples/c_keywords/: nomo.toml
examples/comments/: nomo.toml
examples/const/: nomo.toml
examples/defer/: nomo.toml
examples/defer_question/: nomo.toml
examples/defer_try/: nomo.toml
examples/deps_git/: nomo.toml
examples/deps_vendor/: nomo.toml
examples/enum_struct_payload/: nomo.toml
examples/env_extended/: nomo.toml
examples/env_get/: nomo.toml
examples/ffi_abs/: nomo.toml
examples/ffi_opaque/: nomo.toml
examples/ffi_puts/: nomo.toml
examples/ffi_typed_handle/: nomo.toml
examples/file_handle/: nomo.toml
examples/generic_enum/: nomo.toml
examples/generic_function/: nomo.toml
examples/generic_struct/: nomo.toml
examples/hello/: nomo.toml
examples/if_let/: nomo.toml
examples/interface_display/: nomo.toml
examples/io_print/: nomo.toml
examples/io_stderr/: nomo.toml
examples/let_else/: nomo.toml
examples/loops/: nomo.toml
examples/mut_field_borrow/: nomo.toml
examples/mut_methods/: nomo.toml
examples/newline_dot/: nomo.toml
examples/nomo_doc_basic/: nomo.toml
examples/nomo_test_basic/: nomo.toml
examples/operators_arithmetic/: nomo.toml
examples/operators_assignment/: nomo.toml
examples/operators_bitwise/: nomo.toml
examples/operators_logical/: nomo.toml
examples/option_helpers/: nomo.toml
examples/option_question/: nomo.toml
examples/package_path/: nomo.toml
performance/: README.md  release-gate-thresholds.json
scripts/: check_browser_wasm.mjs  compiler_release_gate.py
src/: ast.rs  codegen.rs  compiler.rs  diagnostic.rs  doc.rs  format.rs  lexer.rs  lib.rs  parser.rs  project.rs  semantic.rs
std/: Cargo.toml  intrinsics.toml  nomo.toml
tests/: cli_json.rs  cli_project.rs  diagnostics_docs.rs  examples.rs
(+287 files in other folders)
