[package]
name = "nomo"
version.workspace = true
edition.workspace = true
license.workspace = true

[workspace]
resolver = "2"
members = [
    ".",
    "crates/nomo_compiler",
    "crates/nomo_codegen_c",
    "crates/nomo_ir",
    "crates/nomo_lsp_bridge",
    "crates/nomo_lockfile",
    "crates/nomo_manifest",
    "crates/nomo_resolver",
    "crates/nomo_syntax",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"

[dependencies]
nomo-codegen-c = { path = "crates/nomo_codegen_c" }
nomo-compiler = { path = "crates/nomo_compiler" }
nomo-ir = { path = "crates/nomo_ir" }
nomo-lsp-bridge = { path = "crates/nomo_lsp_bridge" }
nomo-lockfile = { path = "crates/nomo_lockfile" }
nomo-manifest = { path = "crates/nomo_manifest" }
nomo-resolver = { path = "crates/nomo_resolver" }
nomo-syntax = { path = "crates/nomo_syntax" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true

[lib]
name = "nomo"
path = "src/lib.rs"

[[bin]]
name = "nomo"
path = "src/bin/nomo.rs"

[[bin]]
name = "nomoc"
path = "src/bin/nomoc.rs"
