[package]
name = "nomo"
version.workspace = true
edition.workspace = true
license.workspace = true

[workspace]
resolver = "2"
members = [
    ".",
    "crates/nomo_compiler",
    "crates/nomo_codegen_c",
    "crates/nomo_doc",
    "crates/nomo_ir",
    "crates/nomo_fmt",
    "crates/nomo_lsp_bridge",
    "crates/nomo_lockfile",
    "crates/nomo_manifest",
    "crates/nomo_resolver",
    "crates/nomo_runtime",
    "crates/nomo_syntax",
    "crates/nomo_test",
    "libs/diagnostics",
    "libs/graph",
    "libs/spans",
    "std",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
nomo-diagnostics = { path = "libs/diagnostics" }
nomo-graph = { path = "libs/graph" }
nomo-spans = { path = "libs/spans" }
nomo-std = { path = "std" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"
ureq = { version = "3.3.0", features = ["platform-verifier"] }

[dependencies]
nomo-codegen-c = { path = "crates/nomo_codegen_c" }
nomo-compiler = { path = "crates/nomo_compiler" }
nomo-diagnostics.workspace = true
nomo-doc = { path = "crates/nomo_doc" }
nomo-ir = { path = "crates/nomo_ir" }
nomo-fmt = { path = "crates/nomo_fmt" }
nomo-graph.workspace = true
nomo-lsp-bridge = { path = "crates/nomo_lsp_bridge" }
nomo-lockfile = { path = "crates/nomo_lockfile" }
nomo-manifest = { path = "crates/nomo_manifest" }
nomo-resolver = { path = "crates/nomo_resolver" }
nomo-spans.workspace = true
nomo-std.workspace = true
nomo-syntax = { path = "crates/nomo_syntax" }
nomo-test = { path = "crates/nomo_test" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true

[lib]
name = "nomo"
path = "src/lib.rs"

[[bin]]
name = "nomo"
path = "src/bin/nomo.rs"

[[bin]]
name = "nomoc"
path = "src/bin/nomoc.rs"
