[workspace]
resolver = "2"
members = [
    "crates/nomo",
    "crates/nomo_compiler",
    "crates/nomo_codegen_c",
    "crates/nomo_doc",
    "crates/nomo_ir",
    "crates/nomo_fmt",
    "crates/nomo_lsp_bridge",
    "crates/nomo_lockfile",
    "crates/nomo_manifest",
    "crates/nomo_resolver",
    "crates/nomo_runtime",
    "crates/nomo_supply_chain",
    "crates/nomo_syntax",
    "crates/nomo_target",
    "crates/nomo_test",
    "libs/diagnostics",
    "libs/graph",
    "libs/spans",
    "std",
]
default-members = ["crates/nomo"]

[workspace.package]
version = "0.0.0-20260720080715"
edition = "2024"
license = "MIT"

[workspace.dependencies]
nomo = { path = "crates/nomo" }
nomo-codegen-c = { path = "crates/nomo_codegen_c" }
nomo-compiler = { path = "crates/nomo_compiler" }
nomo-diagnostics = { path = "libs/diagnostics" }
nomo-doc = { path = "crates/nomo_doc" }
nomo-fmt = { path = "crates/nomo_fmt" }
nomo-graph = { path = "libs/graph" }
nomo-ir = { path = "crates/nomo_ir" }
nomo-lockfile = { path = "crates/nomo_lockfile" }
nomo-lsp-bridge = { path = "crates/nomo_lsp_bridge" }
nomo-manifest = { path = "crates/nomo_manifest" }
nomo-resolver = { path = "crates/nomo_resolver" }
nomo-runtime = { path = "crates/nomo_runtime" }
nomo-supply-chain = { path = "crates/nomo_supply_chain" }
nomo-spans = { path = "libs/spans" }
nomo-std = { path = "std" }
nomo-syntax = { path = "crates/nomo_syntax" }
nomo-target = { path = "crates/nomo_target" }
nomo-test = { path = "crates/nomo_test" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
sha2 = "0.10"
ring = "0.17"
toml = "0.8"
ureq = { version = "3.3.0", features = ["platform-verifier"] }
