[package]
name = "nomo-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nomo-codegen-c.workspace = true
nomo-diagnostics.workspace = true
nomo-graph.workspace = true
nomo-ir.workspace = true
nomo-std.workspace = true
nomo-syntax.workspace = true

[lib]
name = "nomo_compiler"
